# sbc-bus-network-analysis

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: gephi_lista1.csv  gephi_lista2.csv  gephi_matriz1.csv  gephi_matriz2.csv
data/raw/: linhas.xlsx
docs/: data_dictionary.md  methodology.md
outputs/gephi/: grafo_principal.gephi  grafo_secundario.gephi
outputs/metrics/: Resultados1 - Com Peso - Invertido.txt  Resultados1 - Com Peso.txt  Resultados1 - Sem Peso.txt  Resultados2 - Com Peso - Invertido.txt  Resultados2 - Com Peso.txt  Resultados2 - Sem Peso - Invertido.txt  Resultados2 - Sem Peso.txt
scripts/: analyze_unweighted.py  analyze_weighted.py  build_edge_list_clique.py  build_edge_list_sequential.py  edge_list_to_matrix.py
src/sbc_bus_network/: __init__.py
src/sbc_bus_network/analysis/: unweighted_metrics.py  weighted_metrics.py
src/sbc_bus_network/graph_builders/: route_clique_edges.py  sequential_edges.py
src/sbc_bus_network/io/: csv_graph.py  excel_loader.py
src/sbc_bus_network/utils/: graph_utils.py
tests/: test_graph_builders.py  test_metrics.py
