[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sbc-bus-network-analysis"
version = "0.1.0"
description = "Análise de rede de transporte urbano com Python e Gephi"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "networkx",
  "numpy",
  "openpyxl",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]